workload/02-aspnetapp-ingress.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root #  for license information.
#  ------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-internal
  namespace: a0008
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp-ingress
  namespace: a0008
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.options: default
    traefik.ingress.kubernetes.io/router.middlewares: app-gateway-snet@file, gzip-compress@file
spec:
  ingressClassName: traefik-internal
  tls:
  - hosts:
      - bu0001a0008-00.aks-ingress.havellsaksbaseline.com
        # it is possible to opt for certificate management strategy with dedicated
        # certificates for each TLS SNI route.
        # In this rereference implementation for the sake of simplicity we use a
        # wildcard default certificate added at Ingress Controller configuration level which is *.example.com
        # secretName: <bu0001a0008-00-example-com-tls-secret>
  rules:
  - host: bu0001a0008-00.aks-ingress.havellsaksbaseline.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp-service
            port:
              number: 80
---
